# Owl_z

./: .gitignore  .main_gals.py.swp  Kcorr_script.py  LICENCE  README.md  colors_gals.py  colors_quasars.py  colors_stars_MLT.py  config.yaml  log_Fev_6_24.txt~  main_gals.py  pyproject.toml  setup.py
colors/: HZ_colors.py  LT_colors.py  M_colors.txt  log_gal.txt  log_qso.txt  spt.dat~  spt_Lint.txt  spt_Tint.txt
model/: .qso_c.pyx.swp  README.md  calcu_scaling.py  config.yaml  cont_gal.py  high_z_gal.py  inverse_scaling.py  main_gals_c.py  mlt.py  mlt_c.c  mlt_c.pyx  mlt_m.py  model  qso.py  qso_c.c  qso_c.pyx  scalig.py  setup.py
